_sass/main.scss
@import "vars";

@import "nav";
@import "header";
@import "article";
@import "cv";
@import "thesis";

// The syntax highlighting css
// generated with rougify style bw > code_style_bw.scss
// @import "code_style_bw";  
@import "code_style_github";  


* {
    box-sizing: border-box;
    font-family: $font_stack;
    text-rendering: geometricPrecision;

}

html {
    width: 100vw;
    scroll-behavior: smooth;
}

body {
    background: #fcfcfc;
    color: #222;

    // constrain width and center
    max-width: 900px;
    margin: auto;
    
}

// Padding to keep the keep the content to the right of the header
main {
    margin-left: 240px;
    padding-left: 30px;
    padding-right: 30px;
    
    padding-top: 10vh;
    padding-bottom: 10vh;

    min-height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: center;

    h1 {
        font-size: 2em;
    }
}

/* increase line-height for everything except headings */
main :not(:is(h1,h2,h3,h4,h5,h6)) {
    line-height: 1.3;
    }

a {
    text-decoration: underline;
    color: #222;
}

header a {
    text-decoration: none;
}

nav a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}


.figure {
    max-width: 400px;
    display: block;
    margin: 0 auto;
    margin-top: 1em;
    margin-bottom: 1em;
}

@media 
    only screen and (max-width: $horizontal_breakpoint),
    only screen and (max-height: $vertical_breakpoint)
    {  
        main {
        padding-top: 10px; 
        padding-left: 20px;
        padding-right: 20px;
        margin: 0px;
        }
    
        article {
        margin-left: 0px; } 

        h1 {font-size: 1.5em !important;}
        .MathJax { 
            font-size: 0.8em !important;
            overflow-x: auto;
            overflow-y: hidden;
        }
}

